; ModuleID = '/home/carl/AnghaBench/freebsd/sys/netinet/cc/extr_cc_cubic.c_cubic_conn_init.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/netinet/cc/extr_cc_cubic.c_cubic_conn_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cc_var = type { %struct.cubic* }
%struct.cubic = type { i32 }

@snd_cwnd = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.cc_var*)* @cubic_conn_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cubic_conn_init(%struct.cc_var* %0) #0 {
  %2 = alloca %struct.cc_var*, align 8
  %3 = alloca %struct.cubic*, align 8
  store %struct.cc_var* %0, %struct.cc_var** %2, align 8
  %4 = load %struct.cc_var*, %struct.cc_var** %2, align 8
  %5 = getelementptr inbounds %struct.cc_var, %struct.cc_var* %4, i32 0, i32 0
  %6 = load %struct.cubic*, %struct.cubic** %5, align 8
  store %struct.cubic* %6, %struct.cubic** %3, align 8
  %7 = load %struct.cc_var*, %struct.cc_var** %2, align 8
  %8 = load i32, i32* @snd_cwnd, align 4
  %9 = call i32 @CCV(%struct.cc_var* %7, i32 %8)
  %10 = load %struct.cubic*, %struct.cubic** %3, align 8
  %11 = getelementptr inbounds %struct.cubic, %struct.cubic* %10, i32 0, i32 0
  store i32 %9, i32* %11, align 4
  ret void
}

declare dso_local i32 @CCV(%struct.cc_var*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
